[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/QuestNode.gd" type="Script" id=1]

[node name="QuestNode" type="GraphNode"]
margin_right = 309.0
margin_bottom = 130.0
title = "Quest node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 293.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="Message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 293.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 50 )

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 89.0
margin_right = 293.0
margin_bottom = 103.0
text = "QuestToStart"
align = 1

[node name="QuestToStart" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 104.0
margin_right = 293.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 50 )
[connection signal="close_request" from="." to="." method="_on_QuestNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_QuestNode_resize_request"]
